--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,12 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@primeng/themes": "^19.0.9",
-    "primeng": "^19.0.9",
+    "@taiga-ui/cdk": "^4.29.0",
+    "@taiga-ui/core": "^4.29.0",
+    "@taiga-ui/event-plugins": "^4.0.2",
+    "@taiga-ui/icons": "^4.29.0",
+    "@taiga-ui/kit": "^4.29.0",
+    "@taiga-ui/layout": "^4.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
