--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.data.redis.database=0
 spring.data.redis.username=
 spring.data.redis.password=
 
-spring.datasource.url=jdbc:mysql://localhost:3306/places
+spring.datasource.url=jdbc:mysql://localhost:3306/jioMakan
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 
-spring.data.mongodb.uri = mongodb://localhost:27017/places
+spring.data.mongodb.uri = mongodb://localhost:27017/jioMakan
