--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@ngrx/component-store": "^19.0.1",
     "@primeng/themes": "^19.0.9",
     "@taiga-ui/cdk": "^4.29.0",
     "@taiga-ui/core": "^4.29.0",
