--- a/client/angular.json
+++ b/client/angular.json
@@ -33,6 +33,9 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/manifest.json",
+              "src/reg-sw.js",
+              "src/service-worker.js",
               {
                 "glob": "**/*",
                 "input": "public"
