Add auth frontend & backend (partially done); Add route guards

--- a/client/angular.json
+++ b/client/angular.json
@@ -33,6 +33,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/icons",
               "src/manifest.json",
               "src/reg-sw.js",
               "src/service-worker.js",
