--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,8 +4,11 @@ server.port=8080
 
 google.api.key=
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jioMakan
+spring.security.oauth2.client.registration.google.client-id=${OAUTH2_GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${OAUTH2_GOOGLE_CLIENT_SECRET}
+
+spring.datasource.url=jdbc:mysql://localhost:3306/jiomakan
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 
-spring.data.mongodb.uri = mongodb://localhost:27017/jioMakan
+spring.data.mongodb.uri=mongodb://localhost:27017/jiomakan
