--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.1.0",
     "@ngrx/component-store": "^19.0.1",
     "@primeng/themes": "^19.0.9",
+    "@stripe/stripe-js": "^6.1.0",
     "@taiga-ui/cdk": "^4.29.0",
     "@taiga-ui/core": "^4.29.0",
     "@taiga-ui/event-plugins": "^4.0.2",
