--- a/server/pom.xml
+++ b/server/pom.xml
@@ -86,6 +86,16 @@
 			<artifactId>jakarta.json</artifactId>
 			<version>2.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>28.4.0</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>20.91.0</version>
+		</dependency> -->
 	</dependencies>
 
 	<build>
