--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=finalproject
 
 server.port=8080
 
+# TODO: change url to 8080 before deployment!
+client.base.url=http://localhost:8080
+
 google.api.key=
 
 spring.security.oauth2.client.registration.google.client-id=${OAUTH2_GOOGLE_CLIENT_ID}
@@ -12,3 +15,5 @@ spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 
 spring.data.mongodb.uri=mongodb://localhost:27017/jiomakan
+
+stripe.secret.key=
