--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=finalproject
 
 server.port=8080
 
-# TODO: change url to 8080 before deployment!
+# Note: change url in deployment.yaml to deployed url
 client.base.url=http://localhost:8080
 
 google.api.key=
