--- a/client/angular.json
+++ b/client/angular.json
@@ -59,7 +59,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "900kB",
+                  "maximumWarning": "1MB",
                   "maximumError": "1.2MB"
                 },
                 {
