--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@taiga-ui/icons": "^4.29.0",
     "@taiga-ui/kit": "^4.29.0",
     "@taiga-ui/layout": "^4.29.0",
+    "@taiga-ui/legacy": "^4.30.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
